// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataTable behaves as expected selection -- radio buttons should not have select-all checkbox 1`] = `
<div>
  <section
    class="cds--data-table-container"
  >
    <div
      class="cds--data-table-header"
    >
      <div
        class="cds--data-table-header__content"
      >
        <h2
          class="cds--data-table-header__title"
          id="tc-_r_7g_-title"
        >
          DataTable with selection
        </h2>
      </div>
    </div>
    <div
      class="cds--data-table-content"
    >
      <table
        aria-labelledby="tc-_r_7g_-title"
        class="cds--data-table cds--data-table--lg"
      >
        <thead>
          <tr>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field A
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field B
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          aria-live="polite"
        >
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-17__select-row-b"
                  name="select-row-17"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-17__select-row-b"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 2:A
            </td>
            <td>
              Field 2:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-17__select-row-a"
                  name="select-row-17"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-17__select-row-a"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 1:A
            </td>
            <td>
              Field 1:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-17__select-row-c"
                  name="select-row-17"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-17__select-row-c"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 3:A
            </td>
            <td>
              Field 3:B
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;

exports[`DataTable behaves as expected selection -- radio buttons should render 1`] = `
<div>
  <section
    class="cds--data-table-container"
  >
    <div
      class="cds--data-table-header"
    >
      <div
        class="cds--data-table-header__content"
      >
        <h2
          class="cds--data-table-header__title"
          id="tc-_r_77_-title"
        >
          DataTable with selection
        </h2>
      </div>
    </div>
    <div
      class="cds--data-table-content"
    >
      <table
        aria-labelledby="tc-_r_77_-title"
        class="cds--data-table cds--data-table--lg"
      >
        <thead>
          <tr>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field A
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field B
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          aria-live="polite"
        >
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-16__select-row-b"
                  name="select-row-16"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-16__select-row-b"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 2:A
            </td>
            <td>
              Field 2:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-16__select-row-a"
                  name="select-row-16"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-16__select-row-a"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 1:A
            </td>
            <td>
              Field 1:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-16__select-row-c"
                  name="select-row-16"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-16__select-row-c"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 3:A
            </td>
            <td>
              Field 3:B
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;

exports[`DataTable behaves as expected selection should render and match snapshot 1`] = `
<div>
  <section
    class="cds--data-table-container"
  >
    <div
      class="cds--data-table-header"
    >
      <div
        class="cds--data-table-header__content"
      >
        <h2
          class="cds--data-table-header__title"
          id="tc-_r_2k_-title"
        >
          DataTable with selection
        </h2>
      </div>
    </div>
    <section
      aria-label="data table toolbar"
      class="cds--table-toolbar"
      role="group"
    >
      <div
        aria-hidden="true"
        class="cds--batch-actions"
      >
        <div
          class="cds--batch-summary"
        >
          <p
            class="cds--batch-summary__para"
          >
            <span
              dir="auto"
            >
              0 items selected
            </span>
          </p>
          <span
            class="cds--batch-summary__divider"
          >
            |
          </span>
          <button
            class="cds--btn cds--btn--primary"
            tabindex="-1"
            type="button"
          >
            Select all (3)
          </button>
        </div>
        <div
          class="cds--action-list"
        >
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16,2A14.1725,14.1725,0,0,0,2,16,14.1725,14.1725,0,0,0,16,30,14.1725,14.1725,0,0,0,30,16,14.1725,14.1725,0,0,0,16,2Zm8,15H17v7H15V17H8V15h7V8h2v7h7Z"
              />
              <path
                d="M24 17L17 17 17 24 15 24 15 17 8 17 8 15 15 15 15 8 17 8 17 15 24 15 24 17z"
                data-icon-path="inner-path"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16,2A14.1725,14.1725,0,0,0,2,16,14.1725,14.1725,0,0,0,16,30,14.1725,14.1725,0,0,0,30,16,14.1725,14.1725,0,0,0,16,2Zm8,15H17v7H15V17H8V15h7V8h2v7h7Z"
              />
              <path
                d="M24 17L17 17 17 24 15 24 15 17 8 17 8 15 15 15 15 8 17 8 17 15 24 15 24 17z"
                data-icon-path="inner-path"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16,2A14.1725,14.1725,0,0,0,2,16,14.1725,14.1725,0,0,0,16,30,14.1725,14.1725,0,0,0,30,16,14.1725,14.1725,0,0,0,16,2Zm8,15H17v7H15V17H8V15h7V8h2v7h7Z"
              />
              <path
                d="M24 17L17 17 17 24 15 24 15 17 8 17 8 15 15 15 15 8 17 8 17 15 24 15 24 17z"
                data-icon-path="inner-path"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--batch-summary__cancel cds--btn cds--btn--primary"
            tabindex="-1"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        class="cds--toolbar-content"
      >
        <div
          aria-label="Filter table"
          class="cds--search cds--search--lg cds--toolbar-search-container-persistent"
          role="search"
        >
          <div
            class="cds--search-magnifier"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="cds--search-magnifier-icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5 C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
              />
            </svg>
          </div>
          <label
            class="cds--label"
            for="custom-id"
            id="custom-id-search"
          >
            Filter table
          </label>
          <input
            autocomplete="off"
            class="cds--search-input"
            id="custom-id"
            placeholder="Filter table"
            tabindex="0"
            type="search"
            value=""
          />
          <button
            aria-label="Clear search input"
            class="cds--search-close cds--search-close--hidden"
            title="Clear search input"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
              />
            </svg>
          </button>
        </div>
        <span
          class="cds--overflow-menu__wrapper"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-labelledby="tooltip-_r_2t_"
                class="cds--toolbar-action cds--overflow-menu cds--overflow-menu cds--overflow-menu--md cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost cds--btn--icon-only"
                title="Settings"
                type="button"
              >
                <svg
                  aria-label="Settings"
                  class="cds--overflow-menu__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.5,8.4c0-0.1,0-0.3,0-0.4c0-0.1,0-0.3,0-0.4l1-0.8c0.4-0.3,0.4-0.9,0.2-1.3l-1.2-2C13.3,3.2,13,3,12.6,3 c-0.1,0-0.2,0-0.3,0.1l-1.2,0.4c-0.2-0.1-0.4-0.3-0.7-0.4l-0.3-1.3C10.1,1.3,9.7,1,9.2,1H6.8c-0.5,0-0.9,0.3-1,0.8L5.6,3.1 C5.3,3.2,5.1,3.3,4.9,3.4L3.7,3C3.6,3,3.5,3,3.4,3C3,3,2.7,3.2,2.5,3.5l-1.2,2C1.1,5.9,1.2,6.4,1.6,6.8l0.9,0.9c0,0.1,0,0.3,0,0.4 c0,0.1,0,0.3,0,0.4L1.6,9.2c-0.4,0.3-0.5,0.9-0.2,1.3l1.2,2C2.7,12.8,3,13,3.4,13c0.1,0,0.2,0,0.3-0.1l1.2-0.4 c0.2,0.1,0.4,0.3,0.7,0.4l0.3,1.3c0.1,0.5,0.5,0.8,1,0.8h2.4c0.5,0,0.9-0.3,1-0.8l0.3-1.3c0.2-0.1,0.4-0.2,0.7-0.4l1.2,0.4 c0.1,0,0.2,0.1,0.3,0.1c0.4,0,0.7-0.2,0.9-0.5l1.1-2c0.2-0.4,0.2-0.9-0.2-1.3L13.5,8.4z M12.6,12l-1.7-0.6c-0.4,0.3-0.9,0.6-1.4,0.8 L9.2,14H6.8l-0.4-1.8c-0.5-0.2-0.9-0.5-1.4-0.8L3.4,12l-1.2-2l1.4-1.2c-0.1-0.5-0.1-1.1,0-1.6L2.2,6l1.2-2l1.7,0.6 C5.5,4.2,6,4,6.5,3.8L6.8,2h2.4l0.4,1.8c0.5,0.2,0.9,0.5,1.4,0.8L12.6,4l1.2,2l-1.4,1.2c0.1,0.5,0.1,1.1,0,1.6l1.4,1.2L12.6,12z"
                  />
                  <path
                    d="M8,11c-1.7,0-3-1.3-3-3s1.3-3,3-3s3,1.3,3,3C11,9.6,9.7,11,8,11C8,11,8,11,8,11z M8,6C6.9,6,6,6.8,6,7.9C6,7.9,6,8,6,8 c0,1.1,0.8,2,1.9,2c0,0,0.1,0,0.1,0c1.1,0,2-0.8,2-1.9c0,0,0-0.1,0-0.1C10,6.9,9.2,6,8,6C8.1,6,8,6,8,6z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-_r_2t_"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Settings
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </span>
        <button
          class="cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
          type="button"
        >
          Add new
        </button>
      </div>
    </section>
    <div
      class="cds--data-table-content"
    >
      <table
        aria-labelledby="tc-_r_2k_-title"
        class="cds--data-table cds--data-table--lg"
      >
        <thead>
          <tr>
            <th
              aria-live="off"
              class="cds--table-column-checkbox"
              scope="col"
            >
              <div
                class="cds--checkbox--inline"
              >
                <input
                  class="cds--checkbox"
                  id="data-table-7__select-all"
                  name="select-all-7"
                  type="checkbox"
                />
                <label
                  class="cds--checkbox-label"
                  for="data-table-7__select-all"
                >
                  <span
                    class="cds--visually-hidden"
                  >
                    Select all rows
                  </span>
                </label>
              </div>
            </th>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field A
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field B
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          aria-live="polite"
        >
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox"
            >
              <div
                class="cds--checkbox--inline"
              >
                <input
                  class="cds--checkbox"
                  id="data-table-7__select-row-b"
                  name="select-row-7"
                  type="checkbox"
                />
                <label
                  class="cds--checkbox-label"
                  for="data-table-7__select-row-b"
                >
                  <span
                    class="cds--visually-hidden"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 2:A
            </td>
            <td>
              Field 2:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox"
            >
              <div
                class="cds--checkbox--inline"
              >
                <input
                  class="cds--checkbox"
                  id="data-table-7__select-row-a"
                  name="select-row-7"
                  type="checkbox"
                />
                <label
                  class="cds--checkbox-label"
                  for="data-table-7__select-row-a"
                >
                  <span
                    class="cds--visually-hidden"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 1:A
            </td>
            <td>
              Field 1:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox"
            >
              <div
                class="cds--checkbox--inline"
              >
                <input
                  class="cds--checkbox"
                  id="data-table-7__select-row-c"
                  name="select-row-7"
                  type="checkbox"
                />
                <label
                  class="cds--checkbox-label"
                  for="data-table-7__select-row-c"
                >
                  <span
                    class="cds--visually-hidden"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 3:A
            </td>
            <td>
              Field 3:B
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;

exports[`DataTable renders as expected - Component API should render and match snapshot 1`] = `
<div>
  <section
    class="cds--data-table-container"
    data-testid="test-id"
  >
    <div
      class="cds--data-table-header"
    >
      <div
        class="cds--data-table-header__content"
      >
        <h2
          class="cds--data-table-header__title"
          id="tc-_r_e_-title"
        >
          DataTable with toolbar
        </h2>
      </div>
    </div>
    <section
      aria-label="data table toolbar"
      class="cds--table-toolbar"
      role="group"
    >
      <div
        aria-hidden="true"
        class="cds--batch-actions"
      >
        <div
          class="cds--batch-summary"
        >
          <p
            class="cds--batch-summary__para"
          >
            <span
              dir="auto"
            >
              0 items selected
            </span>
          </p>
        </div>
        <div
          class="cds--action-list"
        >
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16,2A14.1725,14.1725,0,0,0,2,16,14.1725,14.1725,0,0,0,16,30,14.1725,14.1725,0,0,0,30,16,14.1725,14.1725,0,0,0,16,2Zm8,15H17v7H15V17H8V15h7V8h2v7h7Z"
              />
              <path
                d="M24 17L17 17 17 24 15 24 15 17 8 17 8 15 15 15 15 8 17 8 17 15 24 15 24 17z"
                data-icon-path="inner-path"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16,2A14.1725,14.1725,0,0,0,2,16,14.1725,14.1725,0,0,0,16,30,14.1725,14.1725,0,0,0,30,16,14.1725,14.1725,0,0,0,16,2Zm8,15H17v7H15V17H8V15h7V8h2v7h7Z"
              />
              <path
                d="M24 17L17 17 17 24 15 24 15 17 8 17 8 15 15 15 15 8 17 8 17 15 24 15 24 17z"
                data-icon-path="inner-path"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16,2A14.1725,14.1725,0,0,0,2,16,14.1725,14.1725,0,0,0,16,30,14.1725,14.1725,0,0,0,30,16,14.1725,14.1725,0,0,0,16,2Zm8,15H17v7H15V17H8V15h7V8h2v7h7Z"
              />
              <path
                d="M24 17L17 17 17 24 15 24 15 17 8 17 8 15 15 15 15 8 17 8 17 15 24 15 24 17z"
                data-icon-path="inner-path"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--batch-summary__cancel cds--btn cds--btn--primary"
            tabindex="-1"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        class="cds--toolbar-content"
      >
        <div
          aria-label="Filter table"
          class="cds--search cds--search--lg cds--toolbar-search-container-persistent"
          role="search"
        >
          <div
            class="cds--search-magnifier"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="cds--search-magnifier-icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5 C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
              />
            </svg>
          </div>
          <label
            class="cds--label"
            for="custom-id"
            id="custom-id-search"
          >
            Filter table
          </label>
          <input
            autocomplete="off"
            class="cds--search-input"
            id="custom-id"
            placeholder="Filter table"
            tabindex="0"
            type="search"
            value=""
          />
          <button
            aria-label="Clear search input"
            class="cds--search-close cds--search-close--hidden"
            title="Clear search input"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
              />
            </svg>
          </button>
        </div>
        <span
          class="cds--overflow-menu__wrapper"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-labelledby="tooltip-_r_m_"
                class="cds--toolbar-action cds--overflow-menu cds--overflow-menu cds--overflow-menu--md cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost cds--btn--icon-only"
                title="Settings"
                type="button"
              >
                <svg
                  aria-label="Settings"
                  class="cds--overflow-menu__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.5,8.4c0-0.1,0-0.3,0-0.4c0-0.1,0-0.3,0-0.4l1-0.8c0.4-0.3,0.4-0.9,0.2-1.3l-1.2-2C13.3,3.2,13,3,12.6,3 c-0.1,0-0.2,0-0.3,0.1l-1.2,0.4c-0.2-0.1-0.4-0.3-0.7-0.4l-0.3-1.3C10.1,1.3,9.7,1,9.2,1H6.8c-0.5,0-0.9,0.3-1,0.8L5.6,3.1 C5.3,3.2,5.1,3.3,4.9,3.4L3.7,3C3.6,3,3.5,3,3.4,3C3,3,2.7,3.2,2.5,3.5l-1.2,2C1.1,5.9,1.2,6.4,1.6,6.8l0.9,0.9c0,0.1,0,0.3,0,0.4 c0,0.1,0,0.3,0,0.4L1.6,9.2c-0.4,0.3-0.5,0.9-0.2,1.3l1.2,2C2.7,12.8,3,13,3.4,13c0.1,0,0.2,0,0.3-0.1l1.2-0.4 c0.2,0.1,0.4,0.3,0.7,0.4l0.3,1.3c0.1,0.5,0.5,0.8,1,0.8h2.4c0.5,0,0.9-0.3,1-0.8l0.3-1.3c0.2-0.1,0.4-0.2,0.7-0.4l1.2,0.4 c0.1,0,0.2,0.1,0.3,0.1c0.4,0,0.7-0.2,0.9-0.5l1.1-2c0.2-0.4,0.2-0.9-0.2-1.3L13.5,8.4z M12.6,12l-1.7-0.6c-0.4,0.3-0.9,0.6-1.4,0.8 L9.2,14H6.8l-0.4-1.8c-0.5-0.2-0.9-0.5-1.4-0.8L3.4,12l-1.2-2l1.4-1.2c-0.1-0.5-0.1-1.1,0-1.6L2.2,6l1.2-2l1.7,0.6 C5.5,4.2,6,4,6.5,3.8L6.8,2h2.4l0.4,1.8c0.5,0.2,0.9,0.5,1.4,0.8L12.6,4l1.2,2l-1.4,1.2c0.1,0.5,0.1,1.1,0,1.6l1.4,1.2L12.6,12z"
                  />
                  <path
                    d="M8,11c-1.7,0-3-1.3-3-3s1.3-3,3-3s3,1.3,3,3C11,9.6,9.7,11,8,11C8,11,8,11,8,11z M8,6C6.9,6,6,6.8,6,7.9C6,7.9,6,8,6,8 c0,1.1,0.8,2,1.9,2c0,0,0.1,0,0.1,0c1.1,0,2-0.8,2-1.9c0,0,0-0.1,0-0.1C10,6.9,9.2,6,8,6C8.1,6,8,6,8,6z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-_r_m_"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Settings
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </span>
        <button
          class="cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
          type="button"
        >
          Add new
        </button>
      </div>
    </section>
    <div
      class="cds--data-table-content"
    >
      <table
        aria-labelledby="tc-_r_e_-title"
        class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
      >
        <thead>
          <tr>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field A
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field B
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          aria-live="polite"
        >
          <tr>
            <td>
              Field 2:A
            </td>
            <td>
              Field 2:B
            </td>
          </tr>
          <tr>
            <td>
              Field 1:A
            </td>
            <td>
              Field 1:B
            </td>
          </tr>
          <tr>
            <td>
              Field 3:A
            </td>
            <td>
              Field 3:B
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;
